--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
 <!-- jQuery library -->
 <!--<script type="text/javascript" src="./lib/jquery-3.4.1.min.js"></script>-->
-<script type="text/javascript" language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
    <script src="js/caroufredsel.js"></script>
