modify map link form http to https

--- a/home.html
+++ b/home.html
@@ -605,7 +605,7 @@
                      
              <div id="googleMap" style="height:400px; width:100%;">             
               <!-- Add Google Maps -->
-            <script src="http://maps.googleapis.com/maps/api/js"></script>
+            <script src="https://maps.googleapis.com/maps/api/js"></script>
             <script>
             var myCenter = new google.maps.LatLng(22.7567, 75.8868);
 
